REMOVE spock dependency as grails 2.3.2 already supports it, REFACTOR bash script for run-app & ADD for test-app